--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pop-a-loon</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="/build/popup/popup.js" defer></script>
+    <script type="module" src="/dist/popup.js" defer></script>
   </head>
   <body>
     <header>
