--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="/dist/popup.js" defer></script>
   </head>
-  <body>
+  <body id="pop-a-loon">
     <header>
       <h1>Pop-a-loon</h1>
     </header>
