Refactor index.html

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pop-a-loon</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="/dist/popup.js" defer></script>
   </head>
   <body id="pop-a-loon">
-    <header>
-      <h1>Pop-a-loon</h1>
-    </header>
-    <main>
-      <p>Balloons Popped: <span id="balloonCount"></span></p>
-    </main>
+    <div id="root"></div>
   </body>
 </html>
