Add background class to body element in index.html close #27

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pop-a-loon</title>
   </head>
-  <body id="pop-a-loon">
+  <body id="pop-a-loon" class="bg-background">
     <div id="root"></div>
   </body>
 </html>
